- Add sample tests - Reformat code to satisfy linter

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,19 @@
 [tox]
-envlist = py310, py311, lint
+envlist = py39, py310, py311, lint
 
 
 [testenv]
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements_test.txt
+commands =
+    pytest --timeout=5
+
+[testenv:coverage]
+commands =
+    pytest --timeout=5 --cov --cov-report html:htmlcov
 
 [testenv:lint]
 basepython = {env:PYTHON3_PATH:python3}
 commands =
-    flake8 util main.py homekey.py service.py --ignore=D10,D205,D4,E501,E126,E128,W504,W503,E203
+    flake8 tests util main.py homekey.py service.py --ignore=D10,D205,D4,E501,E126,E128,W504,W503,E203
