- Add an ability to disable express mode while keeping ECP

--- a/configuration.json
+++ b/configuration.json
@@ -16,6 +16,7 @@
 
     "homekey": {
         "persist": "homekey.json",
+        "express": true,
         "finish": "silver",
         "flow": "fast"
     }
