- Update README - Make default virtual lock state configurable, set as locked by default

--- a/configuration.json
+++ b/configuration.json
@@ -11,7 +11,8 @@
 
     "hap": {
         "port": 51926,
-        "persist": "hap.state"
+        "persist": "hap.state",
+        "default": "locked"
     },
 
     "homekey": {
