- Add support for choosing other transport and driver types for NFC device - Attempt at patching nfcpy USB transport implementation to support problematic ACR122U units

--- a/configuration.json
+++ b/configuration.json
@@ -4,8 +4,7 @@
     },
 
     "nfc": {
-        "port": "usbserial-0001", 
-        "driver": "pn532",
+        "path": "tty:usbserial-0001:pn532",
         "broadcast": true
     },
 
